--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
@@ -45,15 +45,14 @@
                 <DataGridTextColumn Header="Naam" Binding= "{Binding Item.Naam}" Width="165"/>
                 <DataGridTextColumn Header="Categorie" Binding="{Binding Soort}" Width="120"/>
                 <DataGridTextColumn Header="Zeldzaamheid" Binding= "{Binding Item.Zeldzaamheid}" Width="120"/>
-                <DataGridTextColumn Header="Damagetype" Binding="{Binding DamageType.Naam}" Width="110"/>
+                <DataGridTextColumn Header="Damagetype" Binding="{Binding Damagetype.Naam}" Width="110"/>
                 <DataGridTextColumn Header="Impact" Binding="{Binding Impact}" Width="66"/>
-                <DataGridTextColumn Header="Range" Binding="{Binding Soort}" Width="66"/>
-                <DataGridTextColumn Header="Magazine" Binding="{Binding Soort}" Width="78"/>
-                <DataGridTextColumn Header="Light" Binding="{Binding Soort}" Width="70"/>
+                <DataGridTextColumn Header="Magazine" Binding="{Binding Magazine}" Width="78"/>
+                <DataGridTextColumn Header="Light" Binding="{Binding LightAmount}" Width="70"/>
             </DataGrid.Columns>
         </DataGrid>
 
-        <WrapPanel Orientation="Horizontal" Grid.Row="3" Grid.ColumnSpan="3" Grid.Column="0" Margin="18,10,19.667,10">
+        <WrapPanel Orientation="Horizontal" Grid.Row="3" Grid.ColumnSpan="3" Grid.Column="0" Margin="50,10,45.667,10">
 
             <TextBox x:Name="txtNaam"    Width="149" FontSize="14" HorizontalAlignment="Center"
   materialDesign:HintAssist.Hint="Naam"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
@@ -75,9 +74,6 @@
   materialDesign:HintAssist.Hint="Impact"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
   VerticalAlignment="Bottom" Padding="2,0,0,0" />
 
-            <TextBox x:Name="txtRange"    Width="56" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Range"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
-  VerticalAlignment="Bottom" Padding="2,0,0,0" />
             <TextBox x:Name="txtMagazine"    Width="69" FontSize="14" HorizontalAlignment="Center"
   materialDesign:HintAssist.Hint="Magazine"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
   VerticalAlignment="Bottom" Padding="2,0,0,0" />
