--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
@@ -43,7 +43,7 @@
             </DataGrid.Resources>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Naam" Binding= "{Binding Item.Naam}" Width="165"/>
-                <DataGridTextColumn Header="Categorie" Binding="{Binding Soort}" Width="120"/>
+                <DataGridTextColumn Header="Categorie" Binding="{Binding Wapenklasse.Naam}" Width="120"/>
                 <DataGridTextColumn Header="Zeldzaamheid" Binding= "{Binding Item.Zeldzaamheid}" Width="120"/>
                 <DataGridTextColumn Header="Damagetype" Binding="{Binding Damagetype.Naam}" Width="110"/>
                 <DataGridTextColumn Header="Impact" Binding="{Binding Impact}" Width="66"/>
