--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
@@ -84,7 +84,7 @@
         
         <Button x:Name="btnAddWeapon" Content="Voeg wapen toe" Grid.Row="4" Margin="10,10,10,20" Click="btnAddWeapon_Click"/>
         <Button x:Name="btnChangeWeapon" Content="Wijzig wapen" Grid.Row="4" Grid.Column="1" Margin="10,10,10,20" />
-        <Button x:Name="btnRemoveWeapon" Content="Verwijder wapen" Grid.Row="4"  Grid.Column="2" Margin="10,10,10,20" />
+        <Button x:Name="btnRemoveWeapon" Content="Verwijder wapen" Grid.Row="4"  Grid.Column="2" Margin="10,10,10,20" Click="btnRemoveWeapon_Click" />
           
     </Grid>
 </UserControl>
